# Arithmetic-Benchmark

./: README.md  main.py  pyproject.toml
dataset/: create_dataset.py  eval_data.csv
providers/: anthropic_provider.py  base_provider.py  openai_provider.py
results/: claude-3-opus-20240229_arithmetic_results.csv  claude-3-opus-20240229_arithmetic_test.csv  gpt-3.5-turbo_arithmetic_results.csv  gpt-3.5-turbo_arithmetic_test.csv  gpt-4-turbo-preview_arithmetic_results.csv  gpt-4-turbo-preview_arithmetic_test.csv
